argocd/applications/kube-system/cilium/templates/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s-app
        operator: NotIn
        values:
          - kube-dns
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
